# chorongyi

./: .gitignore  README.md
ai/: Dockerfile  build_opencv.sh  main.py  pyproject.toml
ai/data/processed/: train.csv
ai/notebooks/: 01_preprocessed_test.ipynb
ai/s3/: s3_client.py
ai/scripts/: create_sample_dataset.py
ai/src/data/: dataset.py
ai/tests/: conftest.py  test_dataset.py
ai/tests/data/: test_dataset.py
backend/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: db.py  deps.py  main.py
front/: Dockerfile
