[project]
authors = [{name = "이선호", email = "j76067469@gmail.com"}]
dependencies = []
name = "ai"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.0"

[tool.pixi.environments]
cpu = ["cpu"]
gpu = ["gpu"]
default = ["gpu"]

[tool.pixi.feature.gpu.pypi-dependencies]
#pytorch-gpu = ">=2.7.0,<3"
#cuda-version = ">=12.4,<13"
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu124" }

[tool.pixi.feature.cpu.pypi-dependencies]
#pytorch-cpu = ">=2.7.0,<3"
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cpu" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cpu" }

[tool.pixi.tasks]

[tool.pytest.ini_options]
pythonpath = "."
test_image_size = "244"
test_batch_size = "4"

[tool.pixi.dependencies]
cowpy = ">=1.1.5,<2"
typing = ">=3.10.0.0,<4"
numpy = ">=2.2.5,<3"
pandas = ">=2.2.3,<3"
pytest = ">=8.3.5,<9"
python = "3.10.*"
scikit-learn = ">=1.6.1,<2"
boto3 = ">=1.38.13,<2"

