[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for chorongyi project"
authors = ["kse1660 <kse1660@gmail.com>"]

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.41"
python-dotenv = "^1.1.0"
pymysql = "^1.1.1"
httpx = "^0.28.1"
alembic = "^1.15.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
